# BRender-v1.3.2

./: BRenderConfig.cmake.in  CMakeLists.txt  README.md
.github/workflows/: main.yml
cmake/: brender.pc.in  packaging.cmake
core/: CMakeLists.txt
core/fmt/: CMakeLists.txt  load3ds.c  loadscr.c  loadvue.c  savescr.c
core/fw/: CMakeLists.txt  brqsort.c  datafile.c  defdiag.c  dev_objs.cgh  dev_objs.hpp  devquery.c  devsetup.c  diag.c  image.c  loader.c  mem.c  objectc.c  resource.c  token.c  tokenval.c
core/fw/ddi/: brassert.h  brddi.h  brddi_p.h  dev_objs.cgh  formats.h  lexer.h  register.h  tokenmap.h
core/host/: CMakeLists.txt  himage.c  host_asm.c  hstsetup.c
core/inc/: CMakeLists.txt  brender.h  brmem.h  camera.h  colour.h  compend.h  compiler.h  device_p.h  fixed.h  fw_p.h  material.h  math_p.h  model.h  order.h  pixelmap.h  pm_p.h  pretok.c  pretok.h  pretok.tok  token.h  toktype.c  v1db_p.h  vecfns.h
core/math/: CMakeLists.txt  fixed.c  math_ip.h  matrix23.c  matrix34.c  matrix4.c  vector.c
core/math/ddi/: math_ip.h
core/nulldev/: CMakeLists.txt  device.c  glighting.c  gprim.c
core/pixelmap/: CMakeLists.txt  cmemloops.c  fnt3x5.c  fntp4x6.c  fntp7x9.c  pmdsptch.c  pmfail.c  pmmem.c
core/pixelmap/ddi/: pm_ip.h
core/std/: CMakeLists.txt  stdmem.c
core/v1db/: CMakeLists.txt  dbquery.c  def_mat.c  def_mdl.c  enables.c  modrend.c  prelight.c  prepmap.c  prepmatl.c  prepmesh.c  render.c  v1dbfile.c
dat/: brdrvdep.txt
ddi_inc/: CMakeLists.txt  dev_objs.hpp
drivers/: CMakeLists.txt
drivers/glrend/: CMakeLists.txt  brender.frag.glsl  brender.vert.glsl  cache.c  default.frag.glsl  default.vert.glsl  devclut.c  devclut.h  device.c  device.h  devpixmp.c  devpixmp.h  devpmglf.c  drv.h  drv_ip.h  ext_procs.c  glassert.c  glassert.h  gstored.c  gstored.h  gv1model.c  onscreen.c  outfcty.c  quad.c  renderer.c  renderer.h  rendfcty.c  sbuffer.c  sbuffer.h  shader_brender.c  shader_default.c  sstate.c  state.h  state_primitive.c  state_surface.c  template.h  util.c  v1model.c  video.c  video.h
drivers/glrend/include/: brglrend.h
drivers/pentprim/: CMakeLists.txt  common.h  compiler.h  driver.c  drv_ip.h  fpsetup.c  fpsetup.h  fpwork.h  fti8_piz.c  fti8pizp.c  l_piz.c  match.c  pfpsetup.c  pfpsetup.h  plib.c  prim_t8.ifg  prim_t8f.c  prim_t8x.c  pstate.c  t15_pip.c  t_pia.c  t_piza.c  ti8_pip.c  ti8_piz.c  work.h  x86emu.c  x86emu.h  zb8.c  zb8awtm.c  zb8awtm.h  zb8p2lit.c  zb8p2ulb.c  zb8p2unl.c
drivers/sdl2dev/: CMakeLists.txt  devclut.c  devclut.h  device.c  device.h  devpixmp.c  devpixmp.h  driver.c  drv_ip.h  outfcty.c  outfcty.h  surface.c
drivers/softrend/: CMakeLists.txt  clip.c  convert.c  driver.c  drv_ip.h  faceops.c  ffront.c  gv1buckt.c  mapping.c  renderer.c  rndstate.c  state.c  subdiv.c  v1model.c
drivers/softrend/ddi/: priminfo.h
drivers/virtual_fb/: CMakeLists.txt  devclut.c  devclut.h  device.c  device.h  devpixmp.c  devpixmp.h  driver.c  drv.h  drv_ip.h  object.c  object.h  outfcty.c  outfcty.h  template.h
examples/: CMakeLists.txt
examples/softcube/: CMakeLists.txt  main.c
inc/: CMakeLists.txt  material.h  math_p.h  model.h  pixelmap.h  token.h
make/: envvars.txt  tokgen.pl
tools/mkranges/: stdpal.txt
tools/paljoin/: paljoin.txt  strpntex.txt
tools/testview/: readme.txt
x86emu/: CMakeLists.txt  x86emu.c
x86emu/include/: x86emu.h
